[package]
name = "happy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# btleplug = "0.11.0"
btleplug = { git = "https://github.com/TristonJ/btleplug.git", rev = "d90009d0509eb58677b4f106b48b650dd4e13347" }
strum = "0.21"
strum_macros = "0.21"

enum_primitive = "0.1.1"
num_enum = "0.7.0"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.4.1"
futures = "0.3.28"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
