[package]
name = "happy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bluetooth
btleplug = { git = "https://github.com/deviceplug/btleplug.git", branch = "master"}
strum = "0.21"
strum_macros = "0.21"
enum_primitive = "0.1.1"
num_enum = "0.7.0"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.4.1"
futures = "0.3.28"
tokio-util = "0.7.10"

# Screen
scrap = "0.5.0"

# Logs
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
